# bioresearch

./: README.md  cli.py  pyproject.toml
domains/molecules/: prepare.py  program.md  train.py
domains/perturbation/: prepare.py  program.md  train.py
domains/trials/: prepare.py  program.md  train.py
engine/: __init__.py  loop.py  metrics.py  orchestrator.py  population.py  tracker.py
infra/: colab.py  modal_app.py
knowledge/: precompute.py  retrieval.py
notebooks/: overnight_campaign.ipynb
tests/: test_domains.py  test_engine.py  test_metrics.py
web/: app.py
